--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,133 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+
+/* -----------new styles----------- */
+
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.search-form input {
+  font-family: "Montserrat", sans-serif;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+  padding-left: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #808080;
+}
+
+.search-form input:hover {
+  border: 1px solid #000;
+}
+
+.search-form input:-moz-suppressed {
+  border: 1px solid #4e75ff;
+}
+
+.search-form button {
+  font-family: "Montserrat", sans-serif;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  background-color: #4e75ff;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  margin-left: 8px;
+}
+
+.search-form button:hover {
+  background-color: #6c8cff;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid;
+  border-color: #FF3D00 transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  padding: 20px;
+  justify-content: center;
+}
+
+.gallery-item {
+  display: inline-block;
+  overflow: hidden;
+  width: 360px;
+  border: 1px solid #808080;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 200px;
+  display: block;
+}
+
+
+.info {
+  display: flex;
+  justify-content: center;
+  gap: 34px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.article-strick {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main-word {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.34;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.load-more {
+    font-family: "Montserrat", sans-serif;
+    border-radius: 8px;
+    padding: 8px 16px;
+    width: 125px;
+    background-color: #4e75ff;
+    border: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.load-more:hover {
+  background-color: #6c8cff;
+}
+
