--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,4 @@
 :root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
@@ -17,6 +16,7 @@
 }
 
 body {
+  background-image: linear-gradient(to right top, #112294, #3e27a3, #5e2cb1, #7b31be, #9835cb, #825ae3, #6875f4, #4d8cff, #00afff, #00ccff, #00e5ff, #5ffbf1);
   display: flex;
   flex-direction: column;
   min-width: 100vw;
