--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,7 +29,7 @@
 
 .search-form input {
   font-family: "Montserrat", sans-serif;
-  border: 1px solid #808080;
+  border: none;
   border-radius: 4px;
   width: 272px;
   height: 40px;
@@ -50,22 +50,20 @@
 }
 
 .search-form button {
-  font-family: "Montserrat", sans-serif;
   border-radius: 8px;
-  padding: 8px 16px;
-  width: 91px;
-  background-color: #4e75ff;
+  width: 100px;
+  background-color: #0008D3;
   border: none;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 18px;
   letter-spacing: 0.04em;
-  color: #fff;
-  margin-left: 8px;
+  color: rgb(255, 255, 255);
+  margin-left: 25px;
 }
 
 .search-form button:hover {
-  background-color: #6c8cff;
+  background-color: #151971;
+  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .loader {
@@ -90,10 +88,17 @@
 }
 
 .gallery-item {
+  background-color: ghostwhite;
+  border-radius: 5px;
   display: inline-block;
   overflow: hidden;
   width: 360px;
-  border: 1px solid #808080;
+
+}
+
+.gallery-item:hover {
+  box-shadow: -1px 0px 35px 0px rgba(0, 0, 0, 0.5);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gallery-image {
@@ -127,22 +132,24 @@
 }
 
 .load-more {
-    font-family: "Montserrat", sans-serif;
-    border-radius: 8px;
-    padding: 8px 16px;
-    width: 125px;
-    background-color: #4e75ff;
-    border: none;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #fff;
-    margin-left: auto;
-    margin-right: auto;
+  border-radius: 8px;
+  width: 120px;
+  height: 40px;
+  background-color: #0008D3;
+  border: none;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.04em;
+  color: rgb(255, 255, 255);
+  margin-left: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
 }
 
 .load-more:hover {
-  background-color: #6c8cff;
-}
+  background-color: #151971;
+    transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
 
